tests/ui/function_with_body.stderr
error: unsupported foreign item
 --> $DIR/function_with_body.rs:4:9
  |
4 |         fn f() {}
  |         ^^^^^^^^^
